--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ authors: [kernitus, Rayzr522]
 description: Reverts to pre-1.9 combat mechanics
 website: https://github.com/kernitus/BukkitOldCombatMechanics
 load: POSTWORLD
-softdepend: [PlaceholderAPI, Spartan]
+softdepend: [PlaceholderAPI]
 api-version: 1.13
 
 commands:
