--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -84,10 +84,10 @@ disable-offhand:
   enabled: true
   worlds: []
   # Whether the following list allows items or blocks them
-  whitelist: false
+  whitelist: true
   # List of items that should be allowed/blocked
   # Example: [diamond_sword,BOW]
-  items: [diamond_sword,BOW]
+  items: [DRAGON_EGG,END_ROD,REDSTONE_TORCH,SOUL_TORCH,TORCH,APPLE,MUSHROOM_STEW,BREAD,PORKCHOP,COOKED_PORKCHOP,ENCHANTED_GOLDEN_APPLE,GOLDEN_APPLE,COD,COOKED_COD,SALMON,COOKED_SALMON,TROPICAL_FISH,PUFFERFISH,CAKE,COOKIE,MELON_SLICE,DRIED_KELP,BEEF,COOKED_BEEF,CHICKEN,COOKED_CHICKEN,ROTTEN_FLESH,CARROT,CARROT_ON_A_STICK,GOLDEN_CARROT,BAKED_POTATO,POISONOUS_POTATO,POTATO,PUMPKIN_PIE,COOKED_RABBIT,RABBIT,RABBIT_STEW,COOKED_MUTTON,MUTTON,CHORUS_FRUIT,BEETROOT,BEETROOT_SOUP,SUSPICIOUS_STEW,SWEET_BERRIES,HONEY_BOTTLE,GLOW_BERRIES,MILK_BUCKET]
 
 old-brewing-stand:
   # Automatically refuels brewing stands
@@ -559,16 +559,6 @@ old-critical-hits:
 # ########################
 # SPECIAL SETTINGS BELOW #
 # ########################
-
-# This is to toggle the update checker
-update-checker:
-  # Whether to check for updates and notify players with the oldcombatmechanics.notify permission
-  enabled: true
-  # Whether to automatically download an update of the plugin
-  # The update is applied on the next restart/reload of the server
-  # Auto update is disabled if Spigot version is below 1.18.1 and force-below-1-18-1-config-upgrade is false
-  # This is to prevent accidentally resetting the config
-  auto-update: true
 
 # Whether to force config upgrade even in Spigot versions below 1.18.1
 # This is not advised, as all the comments would be removed
